--- a/portfolio.html
+++ b/portfolio.html
@@ -61,88 +61,134 @@
                 </ul>
 
                 <ul class="examples-set">
-                        <li class="example list">
-                            <a href="#" class="example-link link">
-                            <img src="./images/web-site.jpg" alt="Сторінка веб-сайту" width="370" height="294">
+                    <li class="example list">
+                        <a href="#" class="example-link link">
+                            <div class="example-img">
+                                <img src="./images/web-site.jpg" alt="Сторінка веб-сайту" width="370" height="294">
+                                <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                                    сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                                    приватну особу.</p>
+                            </div>
                             <div class="example-card">
                                 <h2 class="titles name-project">Технокряк</h2>
                                 <p class="projects">Веб-сайт</p>
                             </div>
                         </a>
-                        </li>
-                        <li class="example list">
-                    <a href="#" class="example-link link">                        
-                            <img src="./images/poster.jpg" alt="Баскетболісти" width="370" height="294">
+                    </li>
+                    <li class="example list">
+                        <a href="#" class="example-link link">
+                            <div class="example-img">
+                                <img src="./images/poster.jpg" alt="Баскетболісти" width="370" height="294">
+                                <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                                    сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                                    приватну особу.</p>
+                            </div>
                             <div class="example-card">
                                 <h2 class="titles name-project">Постер New Orlean vs Golden Star</h2>
                                 <p class="projects">Дизайн</p>
                             </div>
                         </a>
-                        </li>
-                        <li class="example list">
-                    <a href="#" class="example-link link">                        
-                            <img src="./images/restaurant.jpg" alt="Логотип ресторану" width="370" height="294">
+                    </li>
+                    <li class="example list">
+                        <a href="#" class="example-link link">
+                            <div class="example-img">
+                                <img src="./images/restaurant.jpg" alt="Логотип ресторану" width="370" height="294">
+                                <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                                    сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                                    приватну особу.</p>
+                            </div>
                             <div class="example-card">
                                 <h2 class="titles name-project">Ресторан Seafood</h2>
                                 <p class="projects">Додаток</p>
                             </div>
                         </a>
-                        </li>
-                        <li class="example list">
-                    <a href="#" class="example-link link">
-                            <img src="./images/headphones.jpg" alt="Навушники" width="370" height="294">
+                    </li>
+                    <li class="example list">
+                        <a href="#" class="example-link link">
+                            <div class="example-img">
+                                <img src="./images/headphones.jpg" alt="Навушники" width="370" height="294">
+                                <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                                    сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                                    приватну особу.</p>
+                            </div>
                             <div class="example-card">
                                 <h2 class="titles name-project">Проєкт Prime</h2>
                                 <p class="projects">Маркетинг</p>
                             </div>
                         </a>
-                        </li>
-                        <li class="example list">
-                    <a href="#" class="example-link link">
-                            <img src="./images/boxes.jpg" alt="Коробки" width="370" height="294">
+                    </li>
+                    <li class="example list">
+                        <a href="#" class="example-link link">
+                            <div class="example-img">
+                                <img src="./images/boxes.jpg" alt="Коробки" width="370" height="294">
+                                <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                                    сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                                    приватну особу.</p>
+                            </div>
                             <div class="example-card">
                                 <h2 class="titles name-project">Проєкт Boxes</h2>
                                 <p class="projects">Додаток</p>
                             </div>
                         </a>
-                        </li>
-                        <li class="example list">
-                    <a href="#" class="example-link link">                        
-                            <img src="./images/web-site-dark.jpg" alt="Сторінка веб-сайту" width="370" height="294">
+                    </li>
+                    <li class="example list">
+                        <a href="#" class="example-link link">
+                            <div class="example-img">
+                                <img src="./images/web-site-dark.jpg" alt="Сторінка веб-сайту" width="370" height="294">
+                                <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                                    сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                                    приватну особу.</p>
+                            </div>
                             <div class="example-card">
                                 <h2 class="titles name-project">Inspiration has no borders</h2>
                                 <p class="projects">Веб-сайт</p>
                             </div>
                         </a>
-                        </li>
-                        <li class="example list">
-                    <a href="#" class="example-link link">                        
-                            <img src="./images/magazine.jpg" alt="Сторінки журналу" width="370" height="294">
+                    </li>
+                    <li class="example list">
+                        <a href="#" class="example-link link">
+                            <div class="example-img">
+                                <img src="./images/magazine.jpg" alt="Сторінки журналу" width="370" height="294">
+                                <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                                    сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                                    приватну особу.</p>
+                            </div>
                             <div class="example-card">
                                 <h2 class="titles name-project">Видання Limited edition</h2>
                                 <p class="projects">Дизайн</p>
                             </div>
                         </a>
-                        </li>
-                        <li class="example list">
-                    <a href="#" class="example-link link">                       
-                            <img src="./images/label.jpg" alt="Лейбл" width="370" height="294">
+                    </li>
+                    <li class="example list">
+                        <a href="#" class="example-link link">
+                            <div class="example-img">
+                                <img src="./images/label.jpg" alt="Лейбл" width="370" height="294">
+                                <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                                    сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                                    приватну особу.</p>
+                            </div>
                             <div class="example-card">
                                 <h2 class="titles name-project">Проєкт Lab</h2>
                                 <p class="projects">Маркетинг</p>
                             </div>
                         </a>
-                        </li>
-                        <li class="example list">
-                    <a href="#" class="example-link link">                       
-                            <img src="./images/notebook.jpg" alt="Чоловік з планшетом на екрані ноутбука" width="370"
+                    </li>
+                    <li class="example list">
+                        <a href="#" class="example-link link">
+                            <div class="example-img">
+                                <img src="./images/notebook.jpg" alt="Чоловік з планшетом на екрані ноутбука"
+                                    width="370">
+                                <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                                    сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                                    приватну особу.</p>
                                 height="294">
+                            </div>
                             <div class="example-card">
                                 <h2 class="titles name-project">Growing business</h2>
                                 <p class="projects">Додаток</p>
                             </div>
-                            </a>
-                        </li>                        
+                        </a>
+                    </li>
                 </ul>
             </div>
         </section>
