Corrects section Activity

--- a/index.html
+++ b/index.html
@@ -110,19 +110,19 @@
                     <li class="list cards-activity"><img src="images/pic.jpg" alt="Набір тексту на клавіатурі"
                             width="370" height="294" />
                         <div class="overlay-activity-box">
-                            <h3 class="overlay-activity">Десктопні додатки</h3>
+                            <p class="overlay-activity">Десктопні додатки</p>
                         </div>
                     </li>
                     <li class="list cards-activity"><img src="images/pic2.jpg"
                             alt="Зображення мобільного телефона на екрані ноутбука" width="370" height="294" />
                         <div class="overlay-activity-box">
-                            <h3 class="overlay-activity">Мобільні додатки</h3>
+                            <p class="overlay-activity">Мобільні додатки</p>
                         </div>
                     </li>
                     <li class="list cards-activity"><img src="images/pic3.jpg"
                             alt="Зображення спектру кольорів на екрані планшета" width="370" height="294" />
                         <div class="overlay-activity-box">
-                            <h3 class="overlay-activity">Дизайнерські рішення</h3>
+                            <p class="overlay-activity">Дизайнерські рішення</p>
                         </div>
                     </li>
                 </ul>
